# GovBot-Prototype

./: .dockerignore  .env.example  .gitignore  README.md  README_DATABASE_BACKUPS.md  alembic.ini  backup_and_clear.sh  delivery_plan.md  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  docker_inspector.sh  middleware.ts  nginx.conf  package-lock.json  pyproject.toml  pytest.ini  requirements-uv-generated.txt  requirements.md  requirements.txt  restore_from_backup.sh  shutdown_with_backup.sh  start_chroma.bat  start_chroma.sh  task.md  test_api.sqlite  test_follow_up_models.py  test_list_documents.py
.chainlit/: config.toml
admin-dashboard/: .dockerignore  .env.example  Dockerfile  README.md  UPDATES.md  next.config.mjs  package-lock.json  package.json
admin-dashboard/app/: layout.tsx  page.tsx
admin-dashboard/components/: react-query-provider.tsx
admin-dashboard/lib/: analytics-api.ts  api-client.ts  types.ts
agencies-admin-dashboard/: Dockerfile  package-lock.json  package.json
agencies-admin-dashboard/components/: iframe-viewer.tsx  login-form.tsx  role-badge.tsx  role-management-modal.tsx  sidebar.tsx  support-feedback-modal.tsx
agencies-admin-dashboard/contexts/: auth-context.tsx
agencies-admin-dashboard/lib/: auth.ts  permissions.ts  users.ts
alembic/: env.py  script.py.mako
alembic/versions/: 0a20158039f4_initial_schema.py  2f0f322e6a1a_add_transcriptions_table.py  8c96491a4f7c_create_collections_table_actual.py  dc617fa8ae20_add_collections_table.py
analytics/: COMPOSITE_METRICS_API.md  Dockerfile  README.md  README_TESTS.md  REQUIREMENTS.md  SENTIMENT_ANALYSIS.md  __init__.py  database.py  main.py  models.py  pytest.ini  requirements.txt  schemas.py  sentiment_analyzer.py  services.py  test-docker.sh  test_composite_metrics.py  test_config.py  test_sentiment_demo.py
analytics-dashboard/: .dockerignore  .gitignore  Dockerfile  package-lock.json  tailwind.config.ts  tsconfig.json
analytics-dashboard/app/: globals.css  page.tsx
analytics-dashboard/components/: app-sidebar.tsx  dashboard-header.tsx  metric-card.tsx
analytics/routers/: __init__.py  business_analytics.py  conversation_analytics.py  usage_analytics.py  user_analytics.py
analytics/scripts/: print_outputs.py
analytics/tests/: conftest.py  test_endpoints.py
app/: layout.tsx  page.tsx
app/api/: fast_api_app.py
app/core/: compatibility_orchestrator.py  event_orchestrator.py  llamaindex_orchestrator.py  orchestrator.py  orchestrator_clean.py
app/db/: database.py
app/utils/: README_chat_persistence.md  chat_event_service.py  chat_persistence.py  document_parsers.py  fallbacks.py  pii.py  presidio_pii.py  prompts.py  security.py  storage.py
chainlit/: Dockerfile.chainlit  app.py  chainlit.md  requirements.txt
components/: dashboard-layout.tsx
components/ui/: context-menu.tsx  dropdown-menu.tsx
docker/: api.Dockerfile  api.dev.Dockerfile  backup.Dockerfile
docs/: ADMIN_DASHBOARD_SPECIFICATION.md  ANALYTICS_DASHBOARD_SPECIFICATION.md  ANALYTICS_INTEGRATION.md  ANALYTICS_MODULE_DOCUMENTATION.md  API_REFERENCE.md  AUDIT_TRAIL_SYSTEM.md  CHAT_EVENT_TRACKING_FRONTEND_GUIDE.md  CHAT_EVENT_TRACKING_SYSTEM.md  CRAWLING_GUIDE.md  DATA_CURRENCY_AND_UPDATES.md  DATA_PROVENANCE_ANALYSIS.md  DEPLOYMENT.md  DOCUMENT_ACCESS_IMPROVEMENTS.md  DOCUMENT_METADATA_API.md  FAIRNESS_AND_BIAS_AUDITS.md  FALLBACK_AND_ESCALATION.md  FEATURE_TEST_PLAN.md  GovStack_Detailed_Presentation_Slides.md  GovStack_Technical_Architecture_Presentation.md  LLAMAINDEX_ORCHESTRATOR.md  LLAMAINDEX_USAGE_TRACKING_REQUIREMENTS.md  MESSAGE_RATING_SYSTEM.md  METABASE_SETUP.md  OPERATIONS.md  PR-pydantic-llamaindex-to-main.md  PRIVACY_FIRST_CHATBOT_COMPLIANCE_ANALYSIS.md  README.md  RISK_MITIGATION_OVERVIEW_PUBLIC.md  RISK_MITIGATION_PLAN.md  SECURITY.md  STORAGE.md  TESTING_PROTOCOLS.md  TEST_PLAN.md  dqf.md  govbot.md  implementation_status.md  technical_design.md
examples/: chat_api_examples.md
presentations/: Aisha_GovStack_Ethics_Presentation.md  GovBot_Architecture_and_Design_Principles.md  Nick_Architecture_CodeReview_Presentation.md  Paul_Data_Deployment_Presentation.md
scripts/: add_audit_trail.py  add_chat_tables.py  add_collection_id_column.py  add_document_indexing_columns.py  add_event_tracking.py  add_indexing_columns.py  add_message_rating_table.py  add_missing_webpage_columns.py  backup_databases.sh  backup_service.sh  backup_volumes.sh  chat_retention.py  check_indexing_status.py  clear_all_data.sh  demo_audit_trail.py  event_cleanup.py  migrate_chat_tables.py  postgres_backup.sh  run_document_indexing.py  run_indexing.py  run_migration.py  seed_collections.py  test_audit_trail.py  test_chat_persistence.py  test_new_chat_persistence.py  update_webpage_collections.py
scripts/postgres-init/: 01-create-metabase-db.sh  01-create-metabase-db.sql
tests/: .env.external  .env.test  Dockerfile  EXTERNAL_TESTING.md  README.md  cli.py  config.py  docker-compose.external.yml  docker-compose.test.yml  prometheus.external.yml  requirements.txt  run_tests.sh  test_document_metadata_api.py  test_transcription_endpoints.py
tests/integration/: .env.example  .gitignore  QUICK_REFERENCE.md  (+13 more)
(+68 files in other folders)
